source/commons/scrisp/scrispsimp.output
Terminals unused in grammar

   EOL


Grammar

    0 $accept: program $end

    1 program: sequence

    2 sequence: assignment
    3         | sequence SEQ assignment

    4 assignment: list
    5           | var ASSIGN assignment

    6 list: term
    7     | list term

    8 term: INT
    9     | DOUBLE
   10     | SYMBOL
   11     | BACHNULL
   12     | var
   13     | BACHNIL
   14     | INLET
   15     | UPLUS term
   16     | UMINUS term
   17     | term PLUS term
   18     | term MINUS term
   19     | term TIMES term
   20     | term DIV term
   21     | term EQUAL term
   22     | term NEQ term
   23     | term LT term
   24     | term GT term
   25     | term LEQ term
   26     | term GEQ term
   27     | term LOGOR term
   28     | term LOGAND term
   29     | term LOGOREXT term
   30     | term LOGANDEXT term
   31     | IF sequence THEN term
   32     | IF sequence THEN term ELSE term
   33     | OPEN sequence CLOSED
   34     | PUSH sequence POP
   35     | PUSH POP
   36     | BIF1 STARTPARAMS sequence ENDPARAMS

   37 var: GLOBALVAR


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 8
INLET (259) 14
DOUBLE (260) 9
SYMBOL (261) 10
GLOBALVAR (262) 37
BIF1 (263) 36
SEQ (264) 3
IF (265) 31 32
THEN (266) 31 32
ELSE (267) 32
ASSIGN (268) 5
PLUS (269) 17
MINUS (270) 18
TIMES (271) 19
DIV (272) 20
LOGOR (273) 27
LOGAND (274) 28
LOGOREXT (275) 29
LOGANDEXT (276) 30
EQUAL (277) 21
LT (278) 23
GT (279) 24
LEQ (280) 25
GEQ (281) 26
NEQ (282) 22
OPEN (283) 33
CLOSED (284) 33
PUSH (285) 34 35
POP (286) 34 35
STARTPARAMS (287) 36
ENDPARAMS (288) 36
BACHNULL (289) 11
BACHNIL (290) 13
EOL (291)
UPLUS (292) 15
UMINUS (293) 16


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
sequence (41)
    on left: 2 3, on right: 1 3 31 32 33 34 36
assignment (42)
    on left: 4 5, on right: 2 3 5
list (43)
    on left: 6 7, on right: 4 7
term (44)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36, on right: 6 7 15 16 17 18 19 20
    21 22 23 24 25 26 27 28 29 30 31 32
var (45)
    on left: 37, on right: 5 12


State 0

    0 $accept: . program $end

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    program     go to state 14
    sequence    go to state 15
    assignment  go to state 16
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 1

    8 term: INT .

    $default  reduce using rule 8 (term)


State 2

   14 term: INLET .

    $default  reduce using rule 14 (term)


State 3

    9 term: DOUBLE .

    $default  reduce using rule 9 (term)


State 4

   10 term: SYMBOL .

    $default  reduce using rule 10 (term)


State 5

   37 var: GLOBALVAR .

    $default  reduce using rule 37 (var)


State 6

   36 term: BIF1 . STARTPARAMS sequence ENDPARAMS

    STARTPARAMS  shift, and go to state 20


State 7

   31 term: IF . sequence THEN term
   32     | IF . sequence THEN term ELSE term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    sequence    go to state 21
    assignment  go to state 16
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 8

   33 term: OPEN . sequence CLOSED

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    sequence    go to state 22
    assignment  go to state 16
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 9

   34 term: PUSH . sequence POP
   35     | PUSH . POP

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    POP        shift, and go to state 23
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    sequence    go to state 24
    assignment  go to state 16
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 10

   11 term: BACHNULL .

    $default  reduce using rule 11 (term)


State 11

   13 term: BACHNIL .

    $default  reduce using rule 13 (term)


State 12

   15 term: UPLUS . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 25
    var   go to state 26


State 13

   16 term: UMINUS . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 27
    var   go to state 26


State 14

    0 $accept: program . $end

    $end  shift, and go to state 28


State 15

    1 program: sequence .
    3 sequence: sequence . SEQ assignment

    SEQ  shift, and go to state 29

    $default  reduce using rule 1 (program)


State 16

    2 sequence: assignment .

    $default  reduce using rule 2 (sequence)


State 17

    4 assignment: list .
    7 list: list . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    $default  reduce using rule 4 (assignment)

    term  go to state 30
    var   go to state 26


State 18

    6 list: term .
   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    TIMES      shift, and go to state 33
    DIV        shift, and go to state 34
    LOGOR      shift, and go to state 35
    LOGAND     shift, and go to state 36
    LOGOREXT   shift, and go to state 37
    LOGANDEXT  shift, and go to state 38
    EQUAL      shift, and go to state 39
    LT         shift, and go to state 40
    GT         shift, and go to state 41
    LEQ        shift, and go to state 42
    GEQ        shift, and go to state 43
    NEQ        shift, and go to state 44

    $default  reduce using rule 6 (list)


State 19

    5 assignment: var . ASSIGN assignment
   12 term: var .

    ASSIGN  shift, and go to state 45

    $default  reduce using rule 12 (term)


State 20

   36 term: BIF1 STARTPARAMS . sequence ENDPARAMS

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    sequence    go to state 46
    assignment  go to state 16
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 21

    3 sequence: sequence . SEQ assignment
   31 term: IF sequence . THEN term
   32     | IF sequence . THEN term ELSE term

    SEQ   shift, and go to state 29
    THEN  shift, and go to state 47


State 22

    3 sequence: sequence . SEQ assignment
   33 term: OPEN sequence . CLOSED

    SEQ     shift, and go to state 29
    CLOSED  shift, and go to state 48


State 23

   35 term: PUSH POP .

    $default  reduce using rule 35 (term)


State 24

    3 sequence: sequence . SEQ assignment
   34 term: PUSH sequence . POP

    SEQ  shift, and go to state 29
    POP  shift, and go to state 49


State 25

   15 term: UPLUS term .
   17     | term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    $default  reduce using rule 15 (term)


State 26

   12 term: var .

    $default  reduce using rule 12 (term)


State 27

   16 term: UMINUS term .
   17     | term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    $default  reduce using rule 16 (term)


State 28

    0 $accept: program $end .

    $default  accept


State 29

    3 sequence: sequence SEQ . assignment

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    assignment  go to state 50
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 30

    7 list: list term .
   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    TIMES      shift, and go to state 33
    DIV        shift, and go to state 34
    LOGOR      shift, and go to state 35
    LOGAND     shift, and go to state 36
    LOGOREXT   shift, and go to state 37
    LOGANDEXT  shift, and go to state 38
    EQUAL      shift, and go to state 39
    LT         shift, and go to state 40
    GT         shift, and go to state 41
    LEQ        shift, and go to state 42
    GEQ        shift, and go to state 43
    NEQ        shift, and go to state 44

    $default  reduce using rule 7 (list)


State 31

   17 term: term PLUS . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 51
    var   go to state 26


State 32

   18 term: term MINUS . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 52
    var   go to state 26


State 33

   19 term: term TIMES . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 53
    var   go to state 26


State 34

   20 term: term DIV . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 54
    var   go to state 26


State 35

   27 term: term LOGOR . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 55
    var   go to state 26


State 36

   28 term: term LOGAND . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 56
    var   go to state 26


State 37

   29 term: term LOGOREXT . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 57
    var   go to state 26


State 38

   30 term: term LOGANDEXT . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 58
    var   go to state 26


State 39

   21 term: term EQUAL . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 59
    var   go to state 26


State 40

   23 term: term LT . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 60
    var   go to state 26


State 41

   24 term: term GT . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 61
    var   go to state 26


State 42

   25 term: term LEQ . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 62
    var   go to state 26


State 43

   26 term: term GEQ . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 63
    var   go to state 26


State 44

   22 term: term NEQ . term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 64
    var   go to state 26


State 45

    5 assignment: var ASSIGN . assignment

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    assignment  go to state 65
    list        go to state 17
    term        go to state 18
    var         go to state 19


State 46

    3 sequence: sequence . SEQ assignment
   36 term: BIF1 STARTPARAMS sequence . ENDPARAMS

    SEQ        shift, and go to state 29
    ENDPARAMS  shift, and go to state 66


State 47

   31 term: IF sequence THEN . term
   32     | IF sequence THEN . term ELSE term

    INT        shift, and go to state 1
    INLET      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    SYMBOL     shift, and go to state 4
    GLOBALVAR  shift, and go to state 5
    BIF1       shift, and go to state 6
    IF         shift, and go to state 7
    OPEN       shift, and go to state 8
    PUSH       shift, and go to state 9
    BACHNULL   shift, and go to state 10
    BACHNIL    shift, and go to state 11
    UPLUS      shift, and go to state 12
    UMINUS     shift, and go to state 13

    term  go to state 67
    var   go to state 26


State 48

   33 term: OPEN sequence CLOSED .

    $default  reduce using rule 33 (term)


State 49

   34 term: PUSH sequence POP .

    $default  reduce using rule 34 (term)


State 50

    3 sequence: sequence SEQ assignment .

    $default  reduce using rule 3 (sequence)


State 51

   17 term: term . PLUS term
   17     | term PLUS term .
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    TIMES  shift, and go to state 33
    DIV    shift, and go to state 34

    $default  reduce using rule 17 (term)


State 52

   17 term: term . PLUS term
   18     | term . MINUS term
   18     | term MINUS term .
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    TIMES  shift, and go to state 33
    DIV    shift, and go to state 34

    $default  reduce using rule 18 (term)


State 53

   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   19     | term TIMES term .
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    $default  reduce using rule 19 (term)


State 54

   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   20     | term DIV term .
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    $default  reduce using rule 20 (term)


State 55

   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   27     | term LOGOR term .
   28     | term . LOGAND term
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    PLUS       shift, and go to state 31
    MINUS      shift, and go to state 32
    TIMES      shift, and go to state 33
    DIV        shift, and go to state 34
    LOGAND     shift, and go to state 36
    LOGANDEXT  shift, and go to state 38
    EQUAL      shift, and go to state 39
    LT         shift, and go to state 40
    GT         shift, and go to state 41
    LEQ        shift, and go to state 42
    GEQ        shift, and go to state 43
    NEQ        shift, and go to state 44

    $default  reduce using rule 27 (term)


State 56

   17 term: term . PLUS term
   18     | term . MINUS term
   19     | term . TIMES term
   20     | term . DIV term
   21     | term . EQUAL term
   22     | term . NEQ term
   23     | term . LT term
   24     | term . GT term
   25     | term . LEQ term
   26     | term . GEQ term
   27     | term . LOGOR term
   28     | term . LOGAND term
   28     | term LOGAND term .
   29     | term . LOGOREXT term
   30     | term . LOGANDEXT term

    PLUS   shift, and go to state 31
    MINUS  shift, and go to state 32
    TIMES  shift, and go to state 33
    DIV    shift, and go to state 34
    EQUAL  shift, and go to state 39
    LT     shift, and go to state 40
    GT     shift, and go to state 41
    LEQ    shift, and go to state 42
    GEQ    shift, and go to state 43
    NEQ    shift, and go to state 44

    $default  reduce using rule 28 (term)


State 57
